precommit done